# Audio-Haxor

./: .gitignore  Cargo.toml  README.md  TODO.md  config.default.json  config.default.toml  history.js  incremental-scan.md  index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js  update-worker.js
.github/workflows/: ci.yml  release.yml
audio-engine/: CMakeLists.txt  Cargo.toml  README.md
audio-engine/helper-app/: Info.plist
audio-engine/src/: AppLog.cpp  AppLog.hpp  CrashHandler.cpp  Engine.cpp  Engine.hpp  Main.cpp  ParentWatchdog.cpp  VisualPreview.cpp  VisualPreview.hpp  main.rs  playback.rs
docs/: build-meta.js  index.html  report.html
docs/tutorial/: 01-welcome.html  19-als-generator.html
frontend/: index.html  tray-popover.html
frontend/js/: als-generator.js  als-timeline.js  app.js  audio-decode-worker.js  audio-engine.js  audio.js  batch-select.js  columns.js  command-palette.js  context-menu.js  daw.js  dep-graph.js  disk-usage.js  drag-reorder.js  duplicates.js  export.js  favorites.js  file-browser.js  genre-rules-dashboard.js  heatmap-dashboard.js  help-overlay.js  history.js  i18n-ui.js  ipc.js  keyboard-nav.js  kvr.js  midi.js  modal-drag.js  multi-filter.js  native-file-drag.js  notes.js  pdf.js  plugins.js  presets.js  sample-browser.js  settings-search.js  settings.js  shortcuts.js  smart-playlists.js  sort-persist.js  (+10 more)
i18n/: app_i18n_cs.json  app_i18n_da.json  app_i18n_de.json  app_i18n_el.json  app_i18n_en.json  app_i18n_es.json  app_i18n_es_419.json  app_i18n_fi.json  app_i18n_fr.json  app_i18n_hi.json  app_i18n_hu.json  app_i18n_id.json  app_i18n_it.json  app_i18n_ja.json  app_i18n_ko.json  app_i18n_nb.json  app_i18n_nl.json  app_i18n_pl.json  app_i18n_pt.json  app_i18n_pt_br.json  app_i18n_ro.json  app_i18n_ru.json  app_i18n_sv.json  app_i18n_tr.json  app_i18n_uk.json  app_i18n_vi.json  app_i18n_zh.json
scripts/: README-i18n.md  build-audio-engine.mjs  bust.sh  clean.sh  cyberpunk.sh  db-stats.sh  fill_all_locale_i18n_gaps.py  gen_all_app_i18n_locales.py  gen_app_i18n_da.py  gen_app_i18n_de.py  gen_app_i18n_en.py  gen_app_i18n_es.py  gen_app_i18n_fi.py  gen_app_i18n_fr.py  gen_app_i18n_hi.py  gen_app_i18n_it.py  gen_app_i18n_ja.py  gen_app_i18n_ko.py  gen_app_i18n_nb.py  gen_app_i18n_nl.py  gen_app_i18n_pl.py  gen_app_i18n_ro.py  gen_app_i18n_ru.py  gen_app_i18n_sv.py  gen_app_i18n_tr.py  gen_app_i18n_uk.py  gen_app_i18n_vi.py  gen_toast_i18n_en.py  i18n_inject_fb_keys.py  i18n_translate_fb_keys.py  i18n_translate_sample_row_keys.py  i18n_translate_toast_history_keys.py  merge-video-audio-i18n.mjs  merge_batch_into_locales.py  merge_i18n_keys.py  merge_ui_i18n_keys.py  nuke.sh  postbundle-audio-engine-helper.sh  prepare-audio-engine-audioengine.mjs  prepare-audio-engine-sidecar.mjs  (+10 more)
scripts/i18n_batches/: als_seed_control.json  (+7 more)
src-tauri/: Cargo.toml  Entitlements.plist  app_i18n_en.json  build.rs  tauri.conf.json  windows-test-manifest.xml
src-tauri/benches/: benchmarks.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: generate_empty_als.rs  generate_schranz_project.rs  generate_techno_project.rs  generate_toy_project.rs  generate_true_techno.rs  norm_gen.rs  sample_filters.rs
src-tauri/src/: als_generator.rs  als_project.rs  app_activity_macos.rs  app_i18n.rs  audio_engine.rs  audio_extensions.rs  audio_scanner.rs  bpm.rs  bulk_stat.rs  content_hash.rs  daw_scanner.rs  db.rs  fb_watcher.rs  file_watcher.rs  group_sidechain_compressor_template.xml  history.rs  key_detect.rs  kvr.rs  lib.rs  lufs.rs  master_eq8_hpf_template.xml  master_limiter_template.xml  midi.rs  midi_generator.rs  midi_scanner.rs  native_menu.rs  open_with_app.rs  path_norm.rs  pdf_meta.rs  pdf_scanner.rs  preset_scanner.rs  sample_analysis.rs  sample_filters.rs  scanner.rs  scanner_skip_dirs.rs  similarity.rs  space_preview_macos.rs  techno_generator.rs  terminal.rs  track_generator.rs  (+10 more)
src-tauri/tests/: api_invariants.rs  app_i18n_test.rs  audio_ext_test.rs  audio_extensive_test.rs  backend_handwritten_contracts.rs  backend_handwritten_db_ipc_json.rs  backend_handwritten_history_serde_roundtrips.rs  backend_handwritten_history_snapshots.rs  backend_handwritten_parsers_kvr.rs  batch_analysis_test.rs  behavioral_expanded.rs  behavioral_focused.rs  behavioral_heavy.rs  behavioral_more.rs  behavioral_ton.rs  behavioral_ultra.rs  bpm_aiff_corrupt_ssnd.rs  bpm_detection_tests.rs  bpm_edge_cases.rs  bpm_test.rs  command_layer_test.rs  cross_cutting_tests.rs  da_w_formats_test.rs  daw_extensive_test.rs  daw_scanner_pure_test.rs  db_extensive_test.rs  db_test.rs  deep_quality_suite.rs  edge_case_tests.rs  error_handling_tests.rs  export_export_import_test.rs  export_helpers_edge.rs  export_import_test.rs  extra_unit_tests.rs  extra_unit_tests_2.rs  file_extensions_test.rs  file_format_edge_cases.rs  file_watcher_extensive_test.rs  file_watcher_patterns.rs  filename_genre_test.rs  (+72 more)
src-tauri/tests/common/: mod.rs
test/: audio-engine-ipc.test.js  audio-source.test.js  batch-select-source.test.js  columns-source.test.js  command-palette-source.test.js  context-menu-delete-helper.test.js  context-menu-source.test.js  daw-source.test.js  dep-graph-source.test.js  disk-usage-source.test.js  drag-reorder-source.test.js  drag-toast-coverage.test.js  duplicates-source.test.js  eta-source.test.js  export-source.test.js  file-browser-source.test.js  filters-registry-fzf.test.js  fzf-params-source.test.js  fzf-parse-source.test.js  heatmap-dashboard-accuracy.test.js  heatmap-dashboard-source.test.js  help-overlay-source.test.js  i18n-anchor-keys.test.js  i18n-appfmt.test.js  i18n-batch-parity.test.js  i18n-catalog-files.test.js  i18n-forbidden-html.test.js  i18n-html-injection-guard.test.js  i18n-html-keys.test.js  i18n-js-keys.test.js  i18n-locales-and-shape.test.js  i18n-no-empty-placeholders.test.js  i18n-per-key-placeholder-parity.test.js  i18n-placeholders.test.js  i18n-prove-all-locales-complete.test.js  i18n-seed-parity.test.js  i18n-ui-source.test.js  i18n-unmatched-braces.test.js  i18n-value-safety.test.js  iec-format-kvr-bulk.test.js  (+29 more)
