[package]
name = "audio-haxor"
version = "1.28.15"
description = "Desktop app to scan and manage VST/VST3/AU audio plugins, samples, and DAW projects"
authors = ["MenkeTechnologies <MenkeTechnologies@gmail.com>"]
edition = "2024"

[dependencies]
# `macos-private-api` is required for `tauri.conf.json > app.macOSPrivateApi` to actually take
# effect — without it, `transparent: true` on macOS is a silent no-op and the WKWebView keeps its
# default opaque white background (CSS `background: transparent` has nothing behind it to show
# through, so the tray popover shows a white rectangle behind the rounded panel).
tauri = { version = "2", features = ["tray-icon", "protocol-asset", "image-png", "macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.13", features = ["rustls"], default-features = false }
regex = "1"
walkdir = "2"
rayon = "1"
rand = "0.10"
dirs = "6"
plist = "1"
opener = "0.8"
chrono = "0.4"
urlencoding = "2"
toml = "1.1"
tauri-plugin-dialog = "2.7.0"
libc = "0.2"
num_cpus = "1"
# default-features off avoids pulling the HTML/azul stack; we only need low-level ops + PNG images.
printpdf = { version = "0.9", default-features = false, features = ["images", "png"] }
lopdf = "0.40"
flate2 = "1"
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "ogg", "pcm", "isomp4", "mkv", "vorbis"] }
rusqlite = { version = "0.39", features = ["bundled", "functions", "hooks"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
# .tar and .tar.gz archive extraction (Nautilus / Finder both ship this).
# Pairs with the existing `flate2` for gzip decode.
tar = "0.4"
# Extended attributes (Unix-only). Used by the Get Info modal's xattr
# list. The `tar` crate pulls it in transitively but with no platform
# gate; declaring directly under a `cfg(unix)` target so Windows builds
# skip it entirely — xattr 1.6.x unconditionally imports `std::os::unix`
# in its lib.rs and won't compile on Windows even when we never call it.
# The call sites in lib.rs are already `#[cfg(unix)]` gated.
# Text diff for the file-browser "Diff Two Files" action. Myers / Patience
# algorithms; we use unified-diff output.
similar = "2"
# .7z archive decoding (LZMA / LZMA2). Encoding is bigger surface area;
# only decode is wired for now (matches existing .tar.gz support model:
# extract many formats, only compress to .zip).
sevenz-rust2 = { version = "0.16", default-features = false, features = ["util"] }
# Cross-platform atime/mtime updates (touch(1) equivalent). Comes
# transitively via `tar` already; declaring explicitly so the touch
# command doesn't rely on the transitive.
filetime = "0.2"
# EXIF parsing for the Get Info modal on image rows (orientation,
# camera, GPS, etc.). Pure Rust, no system deps.
kamadak-exif = "0.6"
notify = "8"
# Cross-platform "send to recycle bin / trash" (macOS NSFileManager
# trashItemAtURL, Linux XDG Trash spec, Windows Recycle Bin). Used by the
# file-browser delete paths so deletes are recoverable, not permanent.
trash = "5"
sysinfo = "0.38"
image_crate = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"], package = "image" }
sha2 = "0.11"
dashmap = "6"
tauri-plugin-drag = "2.1"
base16ct = { version = "1.0.0", features = ["alloc"] }
portable-pty = "0.9.0"
base64 = "0.22.1"

[target.'cfg(unix)'.dependencies]
xattr = "1"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = { version = "0.6", default-features = false, features = ["alloc"] }
objc2 = { version = "0.6", default-features = false, features = ["exception"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "block2",
    "NSNotification",
    "NSString",
    "NSGeometry",
    "NSValue",
    "NSProcessInfo",
] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSEvent",
    "NSWindow",
    "NSResponder",
    "NSView",
    "NSImage",
    "NSImageView",
    "NSControl",
    "NSColor",
    "NSGraphicsContext",
    "NSGraphics",
    "block2",
] }
objc2-web-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "WKWebView",
    "WKSnapshotConfiguration",
    "block2",
    "objc2-app-kit",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[lib]
name = "app_lib"
crate-type = ["rlib"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
seq-macro = "0.3"

[[bench]]
name = "benchmarks"
harness = false

[lints.rust]
dead_code = "allow"
deprecated = "allow"
unused_imports = "allow"
unused_mut = "allow"
unused_variables = "allow"

[lints.clippy]
approx_constant = "allow"
assertions_on_constants = "allow"
clone_on_copy = "allow"
cloned_ref_to_slice_refs = "allow"
collapsible_if = "allow"
doc_lazy_continuation = "allow"
field_reassign_with_default = "allow"
if_same_then_else = "allow"
len_zero = "allow"
let_and_return = "allow"
manual_checked_ops = "allow"
manual_div_ceil = "allow"
manual_is_multiple_of = "allow"
manual_pattern_char_comparison = "allow"
manual_range_contains = "allow"
manual_strip = "allow"
redundant_closure = "allow"
regex_creation_in_loops = "allow"
should_implement_trait = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
unnecessary_get_then_check = "allow"
useless_conversion = "allow"
useless_vec = "allow"
